--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "pyright>=1.1.378",
     "pandas>=2.2.2",
     "types-pillow>=10.2.0.20240822",
+    "annoy>=1.17.3",
+    "xxhash>=3.5.0",
 ]
 
 [build-system]
