--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "numpy>=2.1.0",
     "scikit-learn>=1.5.1",
     "pillow>=10.4.0",
     "pyright>=1.1.378",
@@ -16,6 +15,8 @@ dependencies = [
     "matplotlib>=3.9.2",
     "pip>=24.2",
     "torch>=2.4.0",
+    "keras>=3.5.0",
+    "numpy<2",
 ]
 
 [build-system]
