--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "torch>=2.4.0",
     "keras>=3.5.0",
     "numpy<2",
+    "pyqt5>=5.15.11",
 ]
 
 [build-system]
@@ -24,3 +25,6 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.pyright]
+
+[tool.uv]
+constraint-dependencies = ["pyqt5-qt5 <=5.15.2"]  # https://github.com/astral-sh/uv/issues/7005
