--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
     "keras>=3.5.0",
     "numpy<2",
     "pyqt5>=5.15.11",
+    "scikit-image",
+    "beartype>=0.18.5",
 ]
 
 [build-system]
