--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.pyright]
+reportPrivateImportUsage = "none"
 
 [tool.uv]
 constraint-dependencies = ["pyqt5-qt5 <=5.15.2"]  # https://github.com/astral-sh/uv/issues/7005
