--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ dependencies = [
     "scikit-image",
     "beartype>=0.18.5",
     "opencv-stubs>=0.0.10",
+    "opencv-python>=4.10.0.84",
+    "torchvision>=0.19.0",
+    "transformers>=4.44.2",
 ]
 
 [build-system]
